Prepare WonRemote v0.1.83
Intent: Prevent Android Agent termination when Viewer connects in the background.
Change-Type: fix
Risk: high
Acceptance: Optimized Android Agent retains WebRTC JNI entry points and serves a Viewer connection request without native binding loss.
Contract: aether-link-app/src/androidNativeRelease.test.ts
Proof-Level: physical-required
Verification: Focused Android native release, discovery, and packaging tests passed 12 tests; Android signed release build and JNI mapping verification passed.
Release-Impact: build-and-deploy
Rollback: Revert before publication; after publication ship a higher fixed version retaining app data.
Request-Review: none - JNI preservation and API-compatible validation do not change network, timers, listeners, retries, database operations, or request volume.
Incident: INC-20260906-004